# my-fastapi-app

./: .dockerignore  .env  .gitignore  README.md  api.dockerfile  api_service.py  bot.dockerfile  bot_service.py  config.py  docker-compose.yml  main.py  pyproject.toml
api/router/: user.py
api/schemas/: user.py
bot/handlers/: commands.py
bot/templates/: keyboards.py
core/: api.py  bot.py  logger.py  psql.py
db/psql/crud/: crud.py
db/psql/models/: columns.py  models.py
utils/: api.py
