[project]
name = "my-fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.2",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.43",
]
